[gd_scene load_steps=5 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Main.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
gamescene = ExtResource( 2 )

[node name="MenuUI" type="CanvasLayer" parent="."]

[node name="GameOver" type="Control" parent="MenuUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="MenuUI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -7.0
margin_right = 37.0
margin_bottom = 7.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 37, 7 )
text = "Game over!"

[node name="StartGame" type="Control" parent="MenuUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="MenuUI/StartGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 472.0
margin_top = 260.0
margin_right = 510.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[connection signal="pressed" from="MenuUI/StartGame/Button" to="." method="_on_Button_pressed"]
